--- a/ajax.html
+++ b/ajax.html
@@ -7,7 +7,7 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 30px; }
     button { margin: 5px; padding: 10px 15px; cursor: pointer; }
-    #output { margin-top: 20px; padding: 10px; border: 1px solid #ccc; }
+    #output { margin-top: 20px; padding: 10px; border: 1px solid #ccc; white-space: pre-wrap; }
   </style>
 </head>
 <body>
@@ -44,6 +44,34 @@ $(document).ready(function(){
       }
     );
   });
+
+  // 🔹 3. Full $.ajax() with beforeSend, success, error, complete
+  $("#ajaxCall").click(function(){
+    $.ajax({
+      url: "https://jsonplaceholder.typicode.com/posts/2",
+      type: "GET",
+      dataType: "json",
+
+      beforeSend: function(){
+        $("#output").html("<b>Loading...</b> Please wait...");
+      },
+
+      success: function(response){
+        $("#output").html("<b>SUCCESS:</b><br>" + JSON.stringify(response, null, 2));
+      },
+
+      error: function(xhr, status, error){
+        $("#output").html(
+          "<b>ERROR:</b><br>Status: " + status + "<br>Error: " + error
+        );
+      },
+
+      complete: function(){
+        $("#output").append("<br><br><i>AJAX call completed.</i>");
+      }
+    });
+  });
+
 });
 </script>
 
